# zydis-js

./: .gitignore  CMakeLists.txt  LICENSE  README.md  index.js  package-lock.json  package.json
.github/workflows/: macosx.yml  main.yml  ubuntu.yml  windows.yml
node/: addon.cpp  encode.cpp  encode.h
src/: addon.cc  sync.cc
